crates/pyenum-derive/tests/ui/fail/generic_enum.rs
use pyenum::PyEnum;

#[derive(Clone, Copy, PyEnum)]
pub enum Bad<T> {
    A(std::marker::PhantomData<T>),
}

fn main() {}
