crates/pyenum-derive/tests/ui/fail/generic_enum.stderr
error: #[derive(PyEnum)] cannot be applied to a generic or lifetime-parameterised enum
 --> tests/ui/fail/generic_enum.rs:4:13
  |
4 | pub enum Bad<T> {
  |             ^
